edit user route and minor fixes
